# Rust

./: README.md
PrimeiroPrograma/: main.rs
arquivos/src/: arquivo.rs  main.rs
casting/src/: main.rs
colecoes/src/: main.rs
constantes/src/: main.rs
controle_fluxo/src/: main.rs
erros/src/: main.rs
estruturados/src/: main.rs
funcoes/src/: main.rs
hcode_functions/: Cargo.toml
matematica/: Cargo.toml
matematica/src/: main.rs
